--- a/public/managerviews/signin.html
+++ b/public/managerviews/signin.html
@@ -44,7 +44,7 @@
           if (data.status && data.status === 2) {
             $('#error p').html('用户名或者密码错误');
           } else {
-            window.location.href = '/catalog';
+            window.location.href = '/manager';
           }
         }
       })
