--- a/public/managerviews/main.html
+++ b/public/managerviews/main.html
@@ -47,7 +47,7 @@
                     <li><a href="#" onclick="createAuthorGet()">新建作者</a></li>
                     <li><a href="#" onclick="createGenre()">新建种类</a></li>
                     <li><a href="#" onclick="createBookGet()">新建书本</a></li>
-                    <li><a href="#">增加书本实例</a></li>
+                    <li><a href="#" onclick="createBookInstanceGet()">增加书本实例</a></li>
                 </ul>
             </div>
             <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
